# game.nix

./: .gitignore  Cargo.toml  flake.nix
nix/: config.nix
src/: lib.rs  main.rs  turn_system.rs
